<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayAssignmentInfo">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="96dp"
        android:text="@string/title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assignment_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_tv"
        app:layout_constraintTop_toTopOf="@+id/title_tv" />

    <TextView
        android:id="@+id/date_assigned_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_assigned"
        app:layout_constraintStart_toStartOf="@+id/title_tv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <TextView
        android:id="@+id/assignment_date_assigned_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_assigned_tv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <TextView
        android:id="@+id/due_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="@+id/date_assigned_tv"
        app:layout_constraintTop_toBottomOf="@+id/date_assigned_tv" />

    <TextView
        android:id="@+id/assignment_due_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/due_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/date_assigned_tv" />

    <TextView
        android:id="@+id/due_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_time"
        app:layout_constraintStart_toStartOf="@+id/due_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/due_date_tv" />

    <TextView
        android:id="@+id/assignment_due_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/due_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/due_date_tv" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/due_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/due_time_tv" />

    <TextView
        android:id="@+id/assignment_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_tv" />

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possible_score"
        app:layout_constraintStart_toStartOf="@+id/description_tv"
        app:layout_constraintTop_toBottomOf="@+id/assignment_description_tv" />

    <TextView
        android:id="@+id/assignment_score_earned_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="???"
        app:layout_constraintStart_toEndOf="@+id/score_tv"
        app:layout_constraintTop_toBottomOf="@+id/assignment_description_tv" />

    <TextView
        android:id="@+id/divider_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        app:layout_constraintStart_toEndOf="@+id/assignment_score_earned_tv"
        app:layout_constraintTop_toBottomOf="@+id/assignment_description_tv" />

    <TextView
        android:id="@+id/assignment_max_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider_tv"
        app:layout_constraintTop_toBottomOf="@+id/assignment_description_tv" />

    <Button
        android:id="@+id/edit_assignment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_tv"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/delete_assignment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="@+id/edit_assignment_btn"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>